--- a/package.json
+++ b/package.json
@@ -1,18 +1,35 @@
 {
   "name": "robotjs",
-  "version": "0.6.0",
+  "version": "1.0.0",
   "description": "Node.js Desktop Automation.",
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
     "test": "run-script-os",
-    "test:darwin:linux": "jasmine test/**/*.js",
-    "test-keyboard": "node test/keyboard.js",
-    "test:win32": "jasmine test/**/*.js",
+    "test:darwin:linux": "jasmine --config=jasmine.mjs",
+    "test:win32": "jasmine --config=jasmine.mjs",
+    "lint": "eslint",
+    "test-standard": "jasmine test/all/*.js --config=jasmine.mjs",
+    "test-integration": "jasmine test/all/integration/*.js --config=jasmine.mjs",
+    "test-bitmap": "jasmine test/all/bitmap.js --config=jasmine.mjs",
+    "test-keyboard": "jasmine test/all/keyboard.js --config=jasmine.mjs",
+    "test-mouse": "jasmine test/all/mouse.js --config=jasmine.mjs",
+    "test-screen": "jasmine test/all/screen.js --config=jasmine.mjs",
     "install": "prebuild-install || node-gyp rebuild",
     "install-debug": "prebuild-install || node-gyp rebuild --debug",
-    "prebuild": "prebuild --all"
+    "prebuild": "prebuild",
+    "prebuild-node": "prebuild --runtime=node --target=\"22.19.0\" --disturl=https://nodejs.org/dist --build-from-source --verbose",
+    "prebuild-electron": "prebuild --runtime=electron --target=\"38.2.1\" --disturl=https://electronjs.org/headers --build-from-source --verbose"
   },
+  "files": [
+    "index.d.ts",
+    "README.md",
+    "LICENSE.md",
+    "CHANGELOG.md",
+    "index.js",
+    "binding.gyp",
+    "src"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/octalmage/robotjs.git"
@@ -42,14 +59,22 @@
   },
   "homepage": "https://github.com/octalmage/robotjs",
   "dependencies": {
-    "nan": "^2.14.2",
-    "prebuild-install": "^5.3.3"
+    "nan": "2.23.0",
+    "prebuild-install": "7.1.3"
   },
   "devDependencies": {
-    "tape": "^4.8.0",
-    "jasmine": "^2.99.0",
-    "prebuild": "^9.1.1",
-    "run-script-os": "^1.0.3",
-    "targetpractice": "0.0.7"
+    "@eslint/js": "^9.37.0",
+    "electron": "^38.2.1",
+    "eslint": "^9.37.0",
+    "eslint-plugin-jasmine": "^4.2.2",
+    "eslint-plugin-jquery": "^1.5.1",
+    "globals": "^16.4.0",
+    "jasmine": "^5.10.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "node-abi": "^3.78.0",
+    "prebuild": "^13.0.1",
+    "run-script-os": "^1.1.6",
+    "sharp": "^0.34.4",
+    "tape": "^5.9.0"
   }
 }
